--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -1,13 +1,14 @@
 name: Terraform fmt check
 
 on:
-  push:
-    branches:
-      - '**'
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
   tf-fmt:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write  # PRへのコメント権限を追加
     steps:
       - uses: actions/checkout@v4
       
@@ -18,18 +19,43 @@ jobs:
       - name: Terraform fmt check
         id: fmt-check
         run: |
-          # フォーマットチェックを実行し、結果を変数に保存
-          set +e  # エラーが発生しても続行
+          set +e
           NEEDS_FMT=$(terraform fmt -check -recursive -list=true 2>&1)
           FMT_EXIT_CODE=$?
-          set -e  # エラーチェックを再度有効化
+          set -e
           
-          # 結果に基づいてメッセージを表示
           if [ $FMT_EXIT_CODE -eq 0 ]; then
-            echo "✅ すべてのTerraformファイルは正しくフォーマットされています"
+            echo "no_fmt_needed=true" >> $GITHUB_OUTPUT
+            echo "fmt_files=" >> $GITHUB_OUTPUT
           else
+            echo "no_fmt_needed=false" >> $GITHUB_OUTPUT
+            echo "fmt_files<<EOF" >> $GITHUB_OUTPUT
+            echo "$NEEDS_FMT" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
             echo "::warning::Terraform files need formatting"
-            echo "🔎 フォーマットが必要なファイルが見つかりました："
-            echo "$NEEDS_FMT"
-            echo "💡 ローカルで 'terraform fmt' を実行してください"
           fi
+
+      - name: Comment on PR
+        if: steps.fmt-check.outputs.no_fmt_needed == 'false'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const files = `${{ steps.fmt-check.outputs.fmt_files }}`.trim().split('\n');
+            const body = `
+            ### ⚠️ Terraform フォーマットの警告
+            
+            以下のファイルのフォーマットが必要です：
+            ${files.map(file => `- \`${file}\``).join('\n')}
+            
+            修正するには、以下のコマンドを実行してください：
+            \`\`\`bash
+            terraform fmt
+            \`\`\`
+            `;
+            
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.name,
+              body: body
+            });
