--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -3,12 +3,16 @@ name: Terraform fmt check
 on:
   pull_request:
     types: [opened, synchronize]
+  push:
+    branches:
+      - '**'
 
 jobs:
   tf-fmt:
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write  # PRへのコメント権限を追加
+      pull-requests: write
+      contents: read
     steps:
       - uses: actions/checkout@v4
       
@@ -36,9 +40,10 @@ jobs:
           fi
 
       - name: Comment on PR
-        if: steps.fmt-check.outputs.no_fmt_needed == 'false'
+        if: github.event_name == 'pull_request' && steps.fmt-check.outputs.no_fmt_needed == 'false'
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const files = `${{ steps.fmt-check.outputs.fmt_files }}`.trim().split('\n');
             const body = `
@@ -53,7 +58,7 @@ jobs:
             \`\`\`
             `;
             
-            await github.rest.issues.createComment({
+            github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.name,
