--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -1,66 +1,38 @@
-name: Terraform fmt check
+name: Terraform fmt check and auto-format
 
 on:
-  pull_request:
-    types: [opened, synchronize]
   push:
-    branches:
-      - '**'
 
 jobs:
   tf-fmt:
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write
-      contents: read
+      contents: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
       
-      - uses: hashicorp/setup-terraform@v3
+      - uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: "1.7.3"
-          
+          terraform_version: 1.2.7
+      
       - name: Terraform fmt check
         id: fmt-check
         run: |
-          set +e
-          NEEDS_FMT=$(terraform fmt -check -recursive -list=true 2>&1)
-          FMT_EXIT_CODE=$?
-          set -e
-          
-          if [ $FMT_EXIT_CODE -eq 0 ]; then
-            echo "no_fmt_needed=true" >> $GITHUB_OUTPUT
-            echo "fmt_files=" >> $GITHUB_OUTPUT
+          if ! terraform fmt -check -recursive; then
+            echo "fmt_failed=true" >> $GITHUB_OUTPUT
           else
-            echo "no_fmt_needed=false" >> $GITHUB_OUTPUT
-            echo "fmt_files<<EOF" >> $GITHUB_OUTPUT
-            echo "$NEEDS_FMT" >> $GITHUB_OUTPUT
-            echo "EOF" >> $GITHUB_OUTPUT
-            echo "::warning::Terraform files need formatting"
+            echo "fmt_failed=false" >> $GITHUB_OUTPUT
           fi
-
-      - name: Comment on PR
-        if: github.event_name == 'pull_request' && steps.fmt-check.outputs.no_fmt_needed == 'false'
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const files = `${{ steps.fmt-check.outputs.fmt_files }}`.trim().split('\n');
-            const body = `
-            ### ⚠️ Terraform フォーマットの警告
-            
-            以下のファイルのフォーマットが必要です：
-            ${files.map(file => `- \`${file}\``).join('\n')}
-            
-            修正するには、以下のコマンドを実行してください：
-            \`\`\`bash
-            terraform fmt
-            \`\`\`
-            `;
-            
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.name,
-              body: body
-            });
+      
+      - name: Run terraform fmt if check failed
+        if: steps.fmt-check.outputs.fmt_failed == 'true'
+        run: terraform fmt -recursive
+      
+      - name: Commit changes if files were formatted
+        if: steps.fmt-check.outputs.fmt_failed == 'true'
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add -A
+          git commit -m "chore: terraform fmt"
+          git push
